@@ -36,6 +36,7 @@ import org.springframework.security.web.authentication.session.SessionAuthentica
 import org.springframework.util.MimeTypeUtils;
 import org.springframework.web.bind.annotation.*;
 
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -63,7 +64,7 @@ public class UserAdminController {
     }
 
     @GetMapping(produces = MimeTypeUtils.APPLICATION_JSON_VALUE)
-    @Secured({SMPAuthority.S_AUTHORITY_TOKEN_SYSTEM_ADMIN})
+    @PreAuthorize("@smpAuthorizationService.isSystemAdministrator")
     public ServiceResult<UserRO> getUsers(
             @RequestParam(value = "page", defaultValue = "0") int page,
             @RequestParam(value = "pageSize", defaultValue = "10") int pageSize,
@@ -143,25 +144,26 @@ public class UserAdminController {
     }
 
     @PostMapping(value = "validate-delete", produces = MimeTypeUtils.APPLICATION_JSON_VALUE)
-    @Secured({SMPAuthority.S_AUTHORITY_TOKEN_SYSTEM_ADMIN})
+    @PreAuthorize("@smpAuthorizationService.isSystemAdministrator")
     public DeleteEntityValidation validateDeleteUsers(@RequestBody List<String> queryEncIds) {
         SMPUserDetails userDetails = getLoggedUserData();
-        List<Long> query = queryEncIds.stream().map(SessionSecurityUtils::decryptEntityId).collect(Collectors.toList());
+        List<Long> query = queryEncIds.stream().map(SessionSecurityUtils::decryptEntityId).toList();
         DeleteEntityValidation dres = new DeleteEntityValidation();
         if (query.contains(userDetails.getUser().getId())) {
             dres.setValidOperation(false);
             dres.setStringMessage("Could not delete logged user!");
             return dres;
         }
-        dres.getListIds().addAll(query.stream().map(SessionSecurityUtils::encryptedEntityId).collect(Collectors.toList()));
+        dres.getListIds().addAll(query.stream().map(SessionSecurityUtils::encryptedEntityId).toList());
         return uiUserService.validateDeleteRequest(dres);
     }
 
     @PutMapping(path = "/{user-id}/change-password-for/{update-user-id}", consumes = MimeTypeUtils.APPLICATION_JSON_VALUE, produces = MimeTypeUtils.APPLICATION_JSON_VALUE)
-    @Secured({SMPAuthority.S_AUTHORITY_TOKEN_SYSTEM_ADMIN})
+    @PreAuthorize("@smpAuthorizationService.isSystemAdministrator")
     public UserRO changePassword(@PathVariable(PATH_PARAM_ENC_USER_ID) String userId,
                                  @PathVariable("update-user-id") String regenerateForUserId,
-                                 @RequestBody PasswordChangeRO newPassword) {
+                                 @RequestBody PasswordChangeRO newPassword,
+                                 HttpServletRequest request) {
         Long authorizedUserId = decryptEntityId(userId);
         Long changeUserId = decryptEntityId(regenerateForUserId);
         LOG.info("change the password of the currently logged in user:[{}] with id:[{}] ", changeUserId, regenerateForUserId);
@@ -172,6 +174,10 @@ public class UserAdminController {
         }
 
         DBUser user = uiUserService.updateUserPassword(authorizedUserId, changeUserId, newPassword.getCurrentPassword(), newPassword.getNewPassword(),!currentUser.isCasAuthenticated());
+        if (authorizedUserId.equals(changeUserId)) {
+            authorizationService.refreshSessionCredentialChangedOn(currentUser);
+            request.changeSessionId();
+        }
 
         return authorizationService.sanitize(uiUserService.convertToRo(user));
     }
